# frameshader

./: .gitignore  CMakeLists.txt  backup_config.ini  debug.sh
include/: Application.h  Camera.h  Config.h  Renderer.h  SegmentationModel.h  Shader.h  ShaderManager.h  TextureUtils.h
models/: selfie_segmentation.txt  selfie_segmenter_landscape.onnx  selfie_segmenter_landscape.trt
shaders/: ascii.frag  ascii.frag.depth.bak  font.png.bak  pixelate.frag  shader.frag  shader.vert  wavy.frag
shaders/frag/: ascii.frag  ascii_matrix.frag  ascii_matrix_color.frag  ascii_matrix_flux.frag  background_ascii.frag  debug_mask.frag
src/: Application.cpp  Camera.cpp  Config.cpp  Renderer.cpp  SegmentationModel.cpp  Shader.cpp  ShaderManager.cpp  TextureUtils.cpp  main.cpp
